tests/frontend/pass/storageread2.act
contract B

contract C

constructor
interface constructor()

creates

    uint x := 1
    uint y := 1


constructor
interface constructor()

creates

    uint a := 1
    uint b := 1

transition f
interface f()

storage C

    x := y
    y
