tests/frontend/fail/var_aliasing.act
contract A

constructor
interface constructor()

creates

  uint x := 0
  uint y := 0

transition f
interface f()

storage

  x := 1
  x := 1

